<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/hardwarestore" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/contact_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title_contact"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_information"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_call_black_24dp"
            android:tint="#757575" />

        <TextView
            android:id="@+id/phone_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/contact_information"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/icon_phone"
            android:autoLink="phone"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textAppearance="?android:textAppearanceSmall" />

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_phone"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_location_on_black_24dp"
            android:tint="#757575" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/phone_text"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/icon_phone"
            android:autoLink="map"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/address"
            android:textAppearance="?android:textAppearanceSmall" />

        <ImageView
            android:id="@+id/icon_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_location"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_mail_black_24dp"
            android:tint="#757575" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/location_text"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/icon_phone"
            android:autoLink="email"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/email_txt"
            android:textAppearance="?android:textAppearanceSmall" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/opening_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/title_hours"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monday_friday"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/opening_hours"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/week"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monday_friday_hours"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/opening_hours"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/monday_friday"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/hours"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/monday_friday"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sat"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saturday_hours"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_below="@id/monday_friday"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@id/saturday"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/sat_hours"
            android:textAppearance="?android:textAppearanceSmall" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_weight="0"
        android:background="#EEEEEE"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/description_EN"
        android:textAppearance="?android:textAppearanceSmall" />

</LinearLayout>
